static/css/style.css
/* custom styles */

* {
    font-family: "Oxanium", sans-serif;
}

/* Body
-------------------------------------------------------------------- */

body {
    display: block;
    min-height: 100vh;
    position: relative;
    padding-bottom: 100px;
}

/* Navbar
-------------------------------------------------------------------- */

.mobile-navbar li {
    padding-top: 2rem;
}

.mobile-navbar li>a {
    font-size: 1.8rem;
}

.mobile-navbar li>a>i {
    color: white;
}

/* Footer
-------------------------------------------------------------------- */

.footer-container {
    flex-grow: 1;
}

.custom-footer {
    position: absolute;
    bottom: 0;
    width: 100vw;
}

.custom-footer p {
    background-color: #fff;
    text-align: center;
    letter-spacing: 1px;
}

.custom-footer p i {
    font-size: 1.3rem;
}

/* Footer Media Queries
-------------------------------------------------------------------- */

@media screen and (max-width: 450px) {
    .custom-footer p {
        font-size: 0.9rem;
    }
}

@media screen and (max-width: 820px) {
    .custom-footer p {
        letter-spacing: 0px;
    }

    .custom-footer p i {
        font-size: 1.2rem;
    }
}

/* Welcome Page
-------------------------------------------------------------------- */

.welcome-title {
    font-size: 3rem;
}

.welcome-content {
    font-size: 1.2rem;
}

.login-button {
    margin-right: 25px;
}

.register-button {
    margin-left: 25px;
}

.welcome-footer p {
    font-size: 0.9rem;
}

.welcome-footer p i {
    color: white;
    font-size: 1.2rem;
}

/* Register Page
-------------------------------------------------------------------- */

.custom-panel-register {
    background-color: rgba(0, 0, 0, 0.8);
}

/* Entries/Logged in home page
-------------------------------------------------------------------- */

.select-wrapper {
    margin-top: 10px;
    color: white;
}

.dropdown-content li>span {
    color: rgb(253, 253, 253);
    background-color: #1a237e;
    opacity: 0.75;
}

.input-field [type=text]{
    color: white !important;
    font-family: "Oxanium", sans-serif !important;
}

.input-field [type=number]{
    color: white !important;
    font-family: "Oxanium", sans-serif !important;
}

input#swim_date {
    color: white;
    font-family: "Oxanium", sans-serif;
}

.datepicker-calendar-container {
    background-color: rgb(129, 218, 210);
}

.filter-submit-button {
    margin-top: 25px;
}

.entry-stroke {
    font-size: 1.1rem;
    padding-right: 10px;
}

/* entries.html Media Queries
-------------------------------------------------------------------- */

@media screen and (max-width: 350px) {
    .filter-submit-button {
        width: 25%;
        font-size: 0.5rem;
    }
}

@media screen and (max-width: 450px) {
    .entry-date {
        font-size: 0.8rem;
    }

    .entry-details {
        font-size: 0.8rem;
    }

    .entry-stroke {
        font-size: 0.9rem;
    }
}

@media screen and (max-width: 600px) {
    .entry-buttons {
        margin-top: 5px;
    }
}

@media screen and (min-width: 532px) {
    .freestyle-top-tab {
        visibility: hidden;
    }

    .freestyle-top-tab::after {
        visibility: visible;
        content: "Freestyle";
    }

    .backstroke-top-tab {
        visibility: hidden;
    }

    .backstroke-top-tab::after {
        visibility: visible;
        content: "Backstroke";
    }

    .breaststroke-top-tab {
        visibility: hidden;
        position: relative;
    }

    .breaststroke-top-tab:after {
        visibility: visible;
        content: "Breaststroke";
    }

    .butterfly-top-tab {
        visibility: hidden;
    }

    .butterfly-top-tab::after {
        visibility: visible;
        content: "Butterfly";
    }
}

/* Edit Entry Page
-------------------------------------------------------------------- */

.submit-edit-button {
    margin-right: 25px;
}

.cancel-edit-button {
    margin-left: 25px;
}

